fixed slider navigation buttons position on mobiles

--- a/themes/clearvalue/assets/scss/pages/home.scss
+++ b/themes/clearvalue/assets/scss/pages/home.scss
@@ -1565,7 +1565,7 @@
             }
 
             .dots {
-              margin: 1.5rem 3.55rem 0;
+              margin: 1.5rem 2.5rem 0;
             }
           }
         }
